# plane-normality-detection

./: .gitignore  CMakeLists.txt  NormalityDetection.cpp  README.md  main.cpp
data/point_clouds/: README.md  rename.sh
data/point_clouds/17_03_2023_tests/0_deg/: 1_0deg_raw.pcd  3_0deg_raw.pcd  4_0deg_raw.pcd
data/point_clouds/17_03_2023_tests/10_deg/: 1_10deg_raw.pcd  2_10deg_raw.pcd  3_10deg_raw.pcd  (+2 more)
data/point_clouds/new_data/: convert_ply_to_pcd.py
docker/: README.md  docker-launch.sh
include/: csv.h
include/normality_detection/: NormalityDetection.h  NormalityDetectionConfig.h
results/Precision/: new_data_0deg_euler_adjust.csv  new_data_10deg_euler_adjust.csv  new_data_10deg_euler_adjust2.csv  new_data_15deg_euler_adjust2.csv  new_data_5deg_euler_adjust.csv  new_data_5deg_euler_adjust2.csv  old_data_0deg_euler_adjust.csv  old_data_10deg_euler_adjust.csv  old_data_15deg_euler_adjust.csv  precision.py
results/Precision/new_data_euler/: new_data_trial2_0deg.csv  new_data_trial2_10deg.csv  new_data_trial2_15deg.csv  new_data_trial2_5deg.csv
results/Precision/new_data_euler_adjust/: new_data_15deg_euler_adjust.csv
results/Precision/new_data_euler_adjust2/: new_data_0deg_euler_adjust2.csv
results/Precision/new_data_trial1/: new_data_trial1_0deg.csv  new_data_trial1_10deg.csv  new_data_trial1_15deg.csv  new_data_trial1_5deg.csv
results/Precision/old_data_euler_adjust/: old_data_5deg_euler_adjust.csv
results/Precision/trial1/: results_0deg.csv  results_10deg.csv  results_15deg.csv  results_5deg.csv
src/: NormalityDetection.cpp  main.cpp
(+12 files in other folders)
